# erica

./: CMakeLists.txt  package.xml  setup.py
launch/: erica.launch  follow_move.launch
scripts/: SerialDataGateway.py  erica_node.py  main.py
